--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,8 @@
 html
   head
     title= title
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(rel="stylesheet" href="/assets/styles/main.css")
+
   body
     h1= message
