--- a/views/index.pug
+++ b/views/index.pug
@@ -10,9 +10,11 @@ html
     title= title
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="/assets/styles/main.css")
+    script(type="text/javascript" src="/assets/js/dat.gui.min.js")
 
   body
-    h1= message
+    //- h1= message
     .scene
       .plane 
         +cuboid()
+    script(type="text/javascript" src="/assets/js/app.js")
