--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,11 +5,11 @@
 
 :root {
     --max-size: 90;
-    --target-size: 100;
+    --target-size: 30;
     --unit: calc((var(--target-size)/var(--max-size)) * 1vmin);
     --perspective: 800;
-    --rotate-x: -15;
-    --rotate-y: -40;
+    --rotate-x: 1;
+    --rotate-y: 1;
     --x: 0;
     --y: 0;
     --z: 0;
@@ -46,20 +46,20 @@ body {
     // border: 0.1vmin solid #111;
     background: hsla(180, 50%, 50%, 0.5);
     // height: calc(var(--plane-height, 25) * 1vmin);
-    height: calc(80 * var(--unit));
-    width: calc(78 * var(--unit));
+    height: calc(78 * var(--unit));
+    width: calc(80 * var(--unit));
     // width: calc(var(--plane-width, 25) * 1vmin);
     transform-style: preserve-3d;
-    transform: rotateX(calc(var(--rotate-x, -24) * 1deg)) rotateY(calc(var(--rotate-y, -24) * 1deg)) rotateX(90deg) translate3d(0, 0, 0);
+    transform: rotateX(calc(var(--rotate-x, -24) * -10deg)) rotateY(calc(var(--rotate-y, -24) * -10deg)) rotateX(90deg) translate3d(0, 0, 0);
 }
 
 // This is what makes the CSS variable powered cuboid
 .cuboid {
-    --width: var(--cuboid-width, 15);
-    --height: var(--cuboid-height, 10);
-    --depth: var(--cuboid-depth, 4);
-    height: calc(var(--depth) * 1vmin);
-    width: calc(var(--width) * 1vmin);
+    --width: var(--cuboid-width);
+    --height: var(--cuboid-height);
+    --depth: var(--cuboid-depth);
+    height: var(--depth);
+    width: var(--width);
     position: absolute;
     transform: translate3d(calc(var(--x, 0) * 1vmin), calc(var(--y, 0) * 1vmin), calc(var(--z, 0) * 1vmin)) rotateX(calc(var(--rotate-cuboid-x, 0) * 1deg)) rotateY(calc(var(--rotate-cuboid-y, 0) * 1deg)) rotateZ(calc(var(--rotate-cuboid-z, 0) * 1deg));
     // transform: translate3d(0, 0, 5vmin);
@@ -71,28 +71,28 @@ body {
     }
     
     & > div:nth-of-type(1) {
-        height: calc(var(--height) * 1vmin);
+        height: var(--height);
         width: 100%;
         transform-origin: 50% 50%;
         transform: rotateX(-90deg);
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%) rotateX(-90deg) translate3d(0, 0, calc((var(--depth) / (2 - var(--exploded))) * 1vmin));
+        transform: translate(-50%, -50%) rotateX(-90deg) translate3d(0, 0, calc((var(--depth) / (2 - var(--exploded)))));
     }
     & > div:nth-of-type(2) {
-        height: calc(var(--height) * 1vmin);
+        height: var(--height);
         width: 100%;
         transform-origin: 50% 50%;
-        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(180deg) translate3d(0, 0, calc((var(--depth) / (2 - var(--exploded))) * 1vmin));
+        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(180deg) translate3d(0, 0, calc((var(--depth) / (2 - var(--exploded)))));
         position: absolute;
         top: 50%;
         left: 50%;
     }
     & > div:nth-of-type(3) {
-        height: calc(var(--height) * 1vmin);
-        width: calc(var(--depth) * 1vmin);
-        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(90deg) translate3d(0, 0, calc((var(--width) / (2 - var(--exploded))) * 1vmin));
+        height: var(--height);
+        width: var(--depth);
+        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(90deg) translate3d(0, 0, calc((var(--width) / (2 - var(--exploded)))));
         position: absolute;
         top: 50%;
         left: 50%;
@@ -100,9 +100,9 @@ body {
     }
     
     & > div:nth-of-type(4) {
-        height: calc(var(--height) * 1vmin);
-        width: calc(var(--depth) * 1vmin);
-        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(-90deg) translate3d(0, 0, calc((var(--width) / (2 - var(--exploded))) * 1vmin));
+        height: var(--height);
+        width: var(--depth);
+        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(-90deg) translate3d(0, 0, calc((var(--width) / (2 - var(--exploded)))));
         position: absolute;
         top: 50%;
         left: 50%;
@@ -110,9 +110,9 @@ body {
     }
     
     & > div:nth-of-type(5) {
-        height: calc(var(--depth) * 1vmin);
-        width: calc(var(--width) * 1vmin);
-        transform: translate(-50%, -50%) translate3d(0, 0, calc((var(--height) / (2 - var(--exploded))) * 1vmin));
+        height: var(--depth);
+        width: var(--width);
+        transform: translate(-50%, -50%) translate3d(0, 0, calc((var(--height) / (2 - var(--exploded)))));
         position: absolute;
         top: 50%;
         left: 50%;
@@ -120,9 +120,9 @@ body {
     }
     
     & > div:nth-of-type(6) {
-        height: calc(var(--depth) * 1vmin);
-        width: calc(var(--width) * 1vmin);
-        transform: translate(-50%, -50%) translate3d(0, 0, calc((var(--height) / (2 - var(--exploded))) * -1vmin)) rotateX(180deg);
+        height: var(--depth);
+        width: var(--width);
+        transform: translate(-50%, -50%) translate3d(0, 0, calc((var(--height) / (2 - var(--exploded))) * -1)) rotateX(180deg);
         position: absolute;
         top: 50%;
         left: 50%;
@@ -130,8 +130,8 @@ body {
 }
 
 .cuboid {
-    top: 50%;
-    left: 50%;
+    // top: 50%;
+    // left: 50%;
     // transform: translate(-50%, -50%);
 }
 
