--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,18 +39,13 @@ body {
 }
 
 .plane {
-    // height: calc(var(--plane-height, 25) * 1vmin);
-    // width: calc(var(--plane-width, 25) * 1vmin);
-    // transform-style: var(--transform-style);
-    // transform: rotateX(calc(var(--rotate-x, -24) * 1deg)) rotateY(calc(var(--rotate-y, -24) * 1deg)) rotateX(90deg) translate3d(0, 0, 0);
-    // border: 0.1vmin solid #111;
     background: hsla(180, 50%, 50%, 0.5);
-    // height: calc(var(--plane-height, 25) * 1vmin);
     height: calc(78 * var(--unit));
     width: calc(80 * var(--unit));
-    // width: calc(var(--plane-width, 25) * 1vmin);
     transform-style: preserve-3d;
-    transform: rotateX(calc(var(--rotate-x, -24) * -10deg)) rotateY(calc(var(--rotate-y, -24) * -10deg)) rotateX(90deg) translate3d(0, 0, 0);
+    transform: rotateX(calc(var(--rotate-x, -24) * -1deg)) 
+               rotateY(calc(var(--rotate-y, -24) * -1deg)) 
+               rotateX(90deg) translate3d(0, 0, 0);
 }
 
 // This is what makes the CSS variable powered cuboid
@@ -61,7 +56,10 @@ body {
     height: var(--depth);
     width: var(--width);
     position: absolute;
-    transform: translate3d(calc(var(--x, 0) * 1vmin), calc(var(--y, 0) * 1vmin), calc(var(--z, 0) * 1vmin)) rotateX(calc(var(--rotate-cuboid-x, 0) * 1deg)) rotateY(calc(var(--rotate-cuboid-y, 0) * 1deg)) rotateZ(calc(var(--rotate-cuboid-z, 0) * 1deg));
+    transform:  translate3d(calc(var(--x, 0) * 1vmin), calc(var(--y, 0) * 1vmin), calc(var(--z, 0) * 1vmin)) 
+                rotateX(calc(var(--rotate-cuboid-x, 0) * 1deg)) 
+                rotateY(calc(var(--rotate-cuboid-y, 0) * 1deg)) 
+                rotateZ(calc(var(--rotate-cuboid-z, 0) * 1deg));
     // transform: translate3d(0, 0, 5vmin);
     transform-style: var(--transform-style);
     
