--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,11 @@
-mixin cuboid(className)
-  .cuboid(class=className)
+mixin cuboid(item)
+  .cuboid(
+    style={
+      '--height': item.height,
+      '--width': item.width,
+      '--length': item.length
+    }
+  )
     - let s = 0
     while s < 6
       .cuboid__side
@@ -7,14 +13,16 @@ mixin cuboid(className)
 
 html
   head
-    title= title
+    title= 'Container Test'
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="/assets/styles/main.css")
     script(type="text/javascript" src="/assets/js/dat.gui.min.js")
 
   body
-    //- h1= message
     .scene
-      .plane 
-        +cuboid()
+      .plane
+        +cuboid(container)
+        .items
+          each item in items
+            +cuboid(item)
     script(type="text/javascript" src="/assets/js/app.js")
