Boxes are sized

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ mixin cuboid(item)
     style={
       '--height': item.height,
       '--width': item.width,
-      '--length': item.length
+      '--depth': item.length
     }
   )
     - let s = 0
