--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,13 +14,6 @@
     --y: 0;
     --z: 0;
     --transform-style: preserve-3d;
-    --cuboid-width: calc(80 * var(--unit));;
-    --cuboid-depth: calc(74 * var(--unit));;
-    --cuboid-height: calc(94 * var(--unit));;
-    --plane-width: 80;
-    --plane-height: 74;
-    --exploded: 0;
-    
 }
 body {
     min-height: 100vh;
@@ -50,17 +43,16 @@ body {
 
 // This is what makes the CSS variable powered cuboid
 .cuboid {
-    --width: var(--cuboid-width);
-    --height: var(--cuboid-height);
-    --depth: var(--cuboid-depth);
-    height: var(--depth);
-    width: var(--width);
+    --width: 80;
+    --height: 94;
+    --depth: 78;
+    height: calc(var(--height) * var(--unit));
+    width: calc(var(--width) * var(--unit));
     position: absolute;
     transform:  translate3d(calc(var(--x, 0) * 1vmin), calc(var(--y, 0) * 1vmin), calc(var(--z, 0) * 1vmin)) 
                 rotateX(calc(var(--rotate-cuboid-x, 0) * 1deg)) 
                 rotateY(calc(var(--rotate-cuboid-y, 0) * 1deg)) 
                 rotateZ(calc(var(--rotate-cuboid-z, 0) * 1deg));
-    // transform: translate3d(0, 0, 5vmin);
     transform-style: var(--transform-style);
     
     &__side {
@@ -69,68 +61,73 @@ body {
     }
     
     & > div:nth-of-type(1) {
-        height: var(--height);
+        height: calc(var(--height) * var(--unit));
         width: 100%;
-        transform-origin: 50% 50%;
-        transform: rotateX(-90deg);
-        position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%) rotateX(-90deg) translate3d(0, 0, calc((var(--depth) / (2 - var(--exploded)))));
+        position: absolute;
+        transform-origin: 50% 50%;
+        transform:  translate(-50%, -50%) 
+                    rotateX(-90deg)
+                    translate3d(0, 0, calc((var(--depth) / 2) * var(--unit)));
     }
     & > div:nth-of-type(2) {
-        height: var(--height);
+        height: calc(var(--height) * var(--unit));
         width: 100%;
-        transform-origin: 50% 50%;
-        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(180deg) translate3d(0, 0, calc((var(--depth) / (2 - var(--exploded)))));
-        position: absolute;
         top: 50%;
         left: 50%;
+        position: absolute;
+        transform-origin: 50% 50%;
+        transform:  translate(-50%, -50%) 
+                    rotateX(-90deg) 
+                    rotateY(180deg) 
+                    translate3d(0, 0, calc((var(--depth) / 2) * var(--unit)));
     }
     & > div:nth-of-type(3) {
-        height: var(--height);
-        width: var(--depth);
-        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(90deg) translate3d(0, 0, calc((var(--width) / (2 - var(--exploded)))));
-        position: absolute;
+        height: calc(var(--height) * var(--unit));
+        width: calc(var(--depth) * var(--unit));
         top: 50%;
         left: 50%;
+        position: absolute;
+        transform:  translate(-50%, -50%) 
+                    rotateX(-90deg) 
+                    rotateY(90deg) 
+                    translate3d(0, 0, calc((var(--width) / 2) * var(--unit)));
 
     }
-    
     & > div:nth-of-type(4) {
-        height: var(--height);
-        width: var(--depth);
-        transform: translate(-50%, -50%) rotateX(-90deg) rotateY(-90deg) translate3d(0, 0, calc((var(--width) / (2 - var(--exploded)))));
-        position: absolute;
+        height: calc(var(--height) * var(--unit));
+        width: calc(var(--depth) * var(--unit));
         top: 50%;
         left: 50%;
-
+        position: absolute;
+        transform:  translate(-50%, -50%) 
+                    rotateX(-90deg) 
+                    rotateY(-90deg) 
+                    translate3d(0, 0, calc((var(--width) / 2) * var(--unit)));
     }
     
     & > div:nth-of-type(5) {
-        height: var(--depth);
-        width: var(--width);
-        transform: translate(-50%, -50%) translate3d(0, 0, calc((var(--height) / (2 - var(--exploded)))));
-        position: absolute;
+        height: calc(var(--depth) * var(--unit));
+        width: calc(var(--width) * var(--unit));
         top: 50%;
         left: 50%;
-
+        position: absolute;
+        transform:  translate(-50%, -50%) 
+                    translate3d(0, 0, calc((var(--height) / 2) * var(--unit)));
     }
     
     & > div:nth-of-type(6) {
-        height: var(--depth);
-        width: var(--width);
-        transform: translate(-50%, -50%) translate3d(0, 0, calc((var(--height) / (2 - var(--exploded))) * -1)) rotateX(180deg);
-        position: absolute;
+        height: calc(var(--depth) * var(--unit));
+        width: calc(var(--width) * var(--unit));
         top: 50%;
         left: 50%;
+        position: absolute;
+        transform:  translate(-50%, -50%) 
+                    rotateX(180deg)
+                    translate3d(0, 0, calc((var(--height) / 2) * var(--unit)));
+                    
     }
-}
-
-.cuboid {
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
 }
 
 .cuboid div {
