--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@ body {
     min-height: 100vh;
     overflow: hidden;
     background: hsl(0, 0%, 90%);
+    font-family: sans-serif;
 }
 
 .scene {
@@ -70,10 +71,11 @@ body {
         top: 50%;
         left: 50%;
         position: absolute;
-        transform-origin: 50% 50%;
-        transform:  translate(-50%, -50%) 
+        transform:  translate(-50%, -50%)
                     rotateX(-90deg)
                     translate3d(0, 0, calc((var(--depth) / 2) * var(--unit)));
+                    
+                    
     }
     & > div:nth-of-type(2) {
         height: calc(var(--height) * var(--unit));
@@ -81,7 +83,6 @@ body {
         top: 50%;
         left: 50%;
         position: absolute;
-        transform-origin: 50% 50%;
         transform:  translate(-50%, -50%) 
                     rotateX(-90deg) 
                     rotateY(180deg) 
@@ -134,7 +135,10 @@ body {
     }
 }
 
-.cuboid div {
+.cuboid .cuboid__side {
     background: hsla(90, 80%, 50%, 0.15);
     border: 0.1vmin solid #111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
