--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -70,7 +70,11 @@ body {
         position: absolute;
         transform:  translate(-50%, -50%)
                     rotateX(-90deg)
-                    translate3d(0, 0, calc((var(--depth) / 2) * var(--unit)));
+                    translate3d(
+                        0, 
+                        calc((var(--height) / -2) * var(--unit)), 
+                        calc((var(--depth) / 2) * var(--unit))
+                    );
                     
                     
     }
@@ -81,7 +85,11 @@ body {
         transform:  translate(-50%, -50%) 
                     rotateX(-90deg) 
                     rotateY(180deg) 
-                    translate3d(0, 0, calc((var(--depth) / 2) * var(--unit)));
+                    translate3d(
+                        0, 
+                        calc((var(--height) / -2) * var(--unit)), 
+                        calc((var(--depth) / 2) * var(--unit))
+                    );
     }
     & > div:nth-of-type(3) {
         height: calc(var(--height) * var(--unit));
@@ -90,7 +98,11 @@ body {
         transform:  translate(-50%, -50%) 
                     rotateX(-90deg) 
                     rotateY(90deg) 
-                    translate3d(0, 0, calc((var(--width) / 2) * var(--unit)));
+                    translate3d(
+                        0, 
+                        calc((var(--height) / -2) * var(--unit)), 
+                        calc((var(--width) / 2) * var(--unit))
+                    );
 
     }
     & > div:nth-of-type(4) {
@@ -100,7 +112,11 @@ body {
         transform:  translate(-50%, -50%) 
                     rotateX(-90deg) 
                     rotateY(-90deg) 
-                    translate3d(0, 0, calc((var(--width) / 2) * var(--unit)));
+                    translate3d(
+                        0, 
+                        calc((var(--height) / -2) * var(--unit)), 
+                        calc((var(--width) / 2) * var(--unit))
+                    );
     }
     
     & > div:nth-of-type(5) {
@@ -108,7 +124,11 @@ body {
         width: calc(var(--width) * var(--unit));
         position: absolute;
         transform:  translate(-50%, -50%) 
-                    translate3d(0, 0, calc((var(--height) / 2) * var(--unit)));
+                    translate3d(
+                        0, 
+                        0, 
+                        calc(var(--height) * var(--unit))
+                    );
     }
     
     & > div:nth-of-type(6) {
@@ -117,8 +137,6 @@ body {
         position: absolute;
         transform:  translate(-50%, -50%) 
                     rotateX(180deg)
-                    translate3d(0, 0, calc((var(--height) / 2) * var(--unit)));
-                    
     }
 }
 
