Center container on plane

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,7 +60,7 @@ body {
     --y: 0;
     --z: 0;
     position: absolute;
-    transform:  translate3d(calc(var(--x) * 1vmin), calc(var(--y) * 1vmin), calc(var(--z) * 1vmin)) 
+    transform:  translate3d(calc(var(--x) * var(--unit)), calc(var(--y) * var(--unit)), calc(var(--z) * var(--unit))) 
                 rotateX(calc(var(--rotate-x) * 1deg)) 
                 rotateY(calc(var(--rotate-y) * 1deg)) 
                 rotateZ(calc(var(--rotate-z) * 1deg));
@@ -152,4 +152,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.container {
+
 }
